# lerobot-hackathon-2025

./: .gitignore  .gitmodules  .swp  README.md  lerobot  pyproject.toml  setup_shell.sh
docs/: train.md
launch/: room_ballz.pgm  room_ballz.yaml
launch/config/: .navigation_params_jazzy.yaml.swp  navigation_params_humble.yaml
ros2_ws/src/demo_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/demo_interfaces/srv/: GetPose.srv  GetPoses.srv
ros2_ws/src/lerobot_o3de/: package.xml  setup.cfg  setup.py
ros2_ws/src/lerobot_o3de/launch/: config.rviz  demo.launch.py  joint_state_publisher.launch.py  navigation.launch.py  navigation_params_humble.yaml  put_ball_in_basket_service.launch.py  slam.launch.py
ros2_ws/src/lerobot_o3de/lerobot_o3de/: joint_states.py  put_ball_in_basket_service.py
ros2_ws/src/rai_demo_lerobot/src/: rosbot-xl-demo.py
scripts/: cam.py  get_joints.py  publish_leader_ros2.py  record_data.sh  rosbot-xl-demo.py  run_policy.sh  test_setup.py  train.sh
